# StrawEngine-Core

./: #StrawEngine.cpp#  #compile_commands.json#  .#StrawEngine.cpp  .#compile_commands.json  .gitignore  CMakeLists.txt  README.md  StrawEngine.cpp  TODO.td  TODO.td~  compile_commands.json  main.cpp
Assets/: master.lua  player.lua  stest.lua  test.as  test.lua  test.lua~
Engine/Addons/: #Sprite.h#  .#Sprite.h  Animator.cpp  Animator.h  Physics.cpp  Physics.h  Script.cpp  Script.h  Sprite.cpp  Sprite.h
Engine/GUI/: .GUISystem.h.swp  GUISystem.cpp  GUISystem.cpp~  GUISystem.h  GUISystem.h~  imgui_impl_opengl3.cpp  imgui_impl_sdl.h
Engine/Game/: #Camera.h#  Addon.cpp  Addon.h  Camera.cpp  Camera.h  Entity.h  Game.cpp  Game.h
Engine/IO/: Window.cpp  Window.h
Engine/Math/: Math.h
Engine/Physics/: ContactListener.cpp  ContactListener.cpp~  ContactListener.h  PhysicsSystem.cpp  PhysicsSystem.h  RaycastHandler.cpp  RaycastHandler.h
Engine/Rendering/: #Renderer.cpp#  #Shader.cpp#  .Renderer.cpp.swp  Animation.cpp  Animation.h  FBO.cpp  FBO.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Engine/Scripting/: ScriptingSystem.cpp  ScriptingSystem.cpp~  ScriptingSystem.h
Engine/Shaders/: #base.vert#  base.frag  base.vert  red.frag  red.vert
Engine/Utils/: #nuklear.cpp#  LogSystem.h  LogSystem.h~  SNuklear.cpp  SNuklear.h  nuklear.cpp  nuklear.cpp~  nuklear.h  nuklear.h~  nuklear_glfw_gl3.h  nuklear_glfw_gl3.h~  nuklear_glfw_gl4.h  nuklear_sdl_gl3.h
Engine/Utils/scriptbuilder/: scriptbuilder.cpp  scriptbuilder.h
Engine/Utils/scriptstdstring/: scriptstdstring.cpp
